k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cortex-showcase
  labels:
    name: cortex-showcase
    environment: production
    team: cortex
